what's looking for

--- a/app/src/main/res/layout/activity_what_look_for.xml
+++ b/app/src/main/res/layout/activity_what_look_for.xml
@@ -31,7 +31,7 @@
         android:textStyle="bold"
         android:text="What are you looking for?"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="25dp"
         />
     <TextView
         android:id="@+id/intro"
@@ -63,6 +63,23 @@
         android:layout_marginTop="10dp"
         android:background="#f4f4f4"
         />
+    <TextView
+        android:id="@+id/microgreens"
+        android:layout_width="71.1dp"
+        android:layout_height="29.7dp"
+        android:textSize="8.7sp"
+        android:fontFamily="sans-serif"
+        android:textStyle="normal"
+        android:textColor="#bcbcbc"
+        android:lineSpacingExtra="41.3sp"
+        android:gravity="center"
+        android:text="Microgreens"
+        android:layout_below="@id/intro"
+        android:layout_toRightOf="@+id/firR"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="3.6dp"
+        android:background="#f4f4f4"
+        />
 
     <TextView
         android:id="@+id/secR"
@@ -78,6 +95,57 @@
         android:layout_below="@id/firR"
         android:layout_alignStart="@+id/wlf"
         android:layout_alignLeft="@+id/wlf"
+        android:layout_marginTop="4.3dp"
+        android:background="#f4f4f4"
+        />
+    <TextView
+        android:id="@+id/honey"
+        android:layout_width="47.1dp"
+        android:layout_height="29.7dp"
+        android:textSize="8.7sp"
+        android:fontFamily="sans-serif"
+        android:textStyle="normal"
+        android:textColor="#bcbcbc"
+        android:lineSpacingExtra="41.3sp"
+        android:gravity="center"
+        android:text="Honey"
+        android:layout_below="@id/firR"
+        android:layout_toRightOf="@+id/secR"
+        android:layout_marginLeft="4.2dp"
+        android:layout_marginTop="4.3dp"
+        android:background="#f4f4f4"
+        />
+    <TextView
+        android:id="@+id/hotFood"
+        android:layout_width="57.8dp"
+        android:layout_height="29.7dp"
+        android:textSize="8.7sp"
+        android:fontFamily="sans-serif"
+        android:textStyle="normal"
+        android:textColor="#bcbcbc"
+        android:lineSpacingExtra="41.3sp"
+        android:gravity="center"
+        android:text="Hot Food"
+        android:layout_below="@id/firR"
+        android:layout_toRightOf="@+id/honey"
+        android:layout_marginLeft="4.2dp"
+        android:layout_marginTop="4.3dp"
+        android:background="#f4f4f4"
+        />
+    <TextView
+        android:id="@+id/tea"
+        android:layout_width="31.1dp"
+        android:layout_height="29.7dp"
+        android:textSize="8.7sp"
+        android:fontFamily="sans-serif"
+        android:textStyle="normal"
+        android:textColor="#bcbcbc"
+        android:lineSpacingExtra="41.3sp"
+        android:gravity="center"
+        android:text="Tea"
+        android:layout_below="@id/firR"
+        android:layout_toRightOf="@+id/hotFood"
+        android:layout_marginLeft="3.6dp"
         android:layout_marginTop="4.3dp"
         android:background="#f4f4f4"
         />
@@ -99,6 +167,40 @@
         android:background="#f4f4f4"
         />
     <TextView
+        android:id="@+id/localServices"
+        android:layout_width="77.8dp"
+        android:layout_height="29.7dp"
+        android:textSize="8.7sp"
+        android:fontFamily="sans-serif"
+        android:textStyle="normal"
+        android:textColor="#bcbcbc"
+        android:lineSpacingExtra="41.3sp"
+        android:gravity="center"
+        android:text="Local Services"
+        android:layout_below="@id/secR"
+        android:layout_toRightOf="@+id/thiR"
+        android:layout_marginLeft="4.2dp"
+        android:layout_marginTop="4.3dp"
+        android:background="#f4f4f4"
+        />
+    <TextView
+        android:id="@+id/bread"
+        android:layout_width="47.1dp"
+        android:layout_height="29.7dp"
+        android:textSize="8.7sp"
+        android:fontFamily="sans-serif"
+        android:textStyle="normal"
+        android:textColor="#bcbcbc"
+        android:lineSpacingExtra="41.3sp"
+        android:gravity="center"
+        android:text="Bread"
+        android:layout_below="@id/secR"
+        android:layout_toRightOf="@+id/localServices"
+        android:layout_marginLeft="4.2dp"
+        android:layout_marginTop="4.3dp"
+        android:background="#f4f4f4"
+        />
+    <TextView
         android:id="@+id/forR"
         android:layout_width="52.4dp"
         android:layout_height="29.7dp"
@@ -112,6 +214,40 @@
         android:layout_below="@id/thiR"
         android:layout_alignStart="@+id/wlf"
         android:layout_alignLeft="@+id/wlf"
+        android:layout_marginTop="4.3dp"
+        android:background="#f4f4f4"
+        />
+    <TextView
+        android:id="@+id/homemadeGoods"
+        android:layout_width="95.8dp"
+        android:layout_height="29.7dp"
+        android:textSize="8.7sp"
+        android:fontFamily="sans-serif"
+        android:textStyle="normal"
+        android:textColor="#bcbcbc"
+        android:lineSpacingExtra="41.3sp"
+        android:gravity="center"
+        android:text="Homemade Goods"
+        android:layout_below="@id/thiR"
+        android:layout_toRightOf="@+id/forR"
+        android:layout_marginLeft="4.2dp"
+        android:layout_marginTop="4.3dp"
+        android:background="#f4f4f4"
+        />
+    <TextView
+        android:id="@+id/art"
+        android:layout_width="35.1dp"
+        android:layout_height="29.7dp"
+        android:textSize="8.7sp"
+        android:fontFamily="sans-serif"
+        android:textStyle="normal"
+        android:textColor="#bcbcbc"
+        android:lineSpacingExtra="41.3sp"
+        android:gravity="center"
+        android:text="Art"
+        android:layout_below="@id/thiR"
+        android:layout_toRightOf="@+id/homemadeGoods"
+        android:layout_marginLeft="4.2dp"
         android:layout_marginTop="4.3dp"
         android:background="#f4f4f4"
         />
@@ -133,6 +269,40 @@
         android:background="#f4f4f4"
         />
     <TextView
+        android:id="@+id/liveMusic"
+        android:layout_width="64dp"
+        android:layout_height="29.7dp"
+        android:textSize="8.7sp"
+        android:fontFamily="sans-serif"
+        android:textStyle="normal"
+        android:textColor="#bcbcbc"
+        android:lineSpacingExtra="41.3sp"
+        android:gravity="center"
+        android:text="Live Music"
+        android:layout_below="@id/forR"
+        android:layout_toRightOf="@+id/fivR"
+        android:layout_marginLeft="3.9dp"
+        android:layout_marginTop="4.3dp"
+        android:background="#f4f4f4"
+        />
+    <TextView
+        android:id="@+id/sweets"
+        android:layout_width="57.8dp"
+        android:layout_height="29.7dp"
+        android:textSize="8.7sp"
+        android:fontFamily="sans-serif"
+        android:textStyle="normal"
+        android:textColor="#bcbcbc"
+        android:lineSpacingExtra="41.3sp"
+        android:gravity="center"
+        android:text="Sweets"
+        android:layout_below="@id/forR"
+        android:layout_toRightOf="@+id/liveMusic"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="4.3dp"
+        android:background="#f4f4f4"
+        />
+    <TextView
         android:id="@+id/sixR"
         android:layout_width="71.5dp"
         android:layout_height="29.7dp"
@@ -150,6 +320,23 @@
         android:background="#f4f4f4"
         />
     <TextView
+        android:id="@+id/beautyProducts"
+        android:layout_width="85.8dp"
+        android:layout_height="29.7dp"
+        android:textSize="8.7sp"
+        android:fontFamily="sans-serif"
+        android:textStyle="normal"
+        android:textColor="#bcbcbc"
+        android:lineSpacingExtra="41.3sp"
+        android:gravity="center"
+        android:text="Beauty Products"
+        android:layout_below="@id/fivR"
+        android:layout_toRightOf="@+id/sixR"
+        android:layout_marginLeft="4.5dp"
+        android:layout_marginTop="4.3dp"
+        android:background="#f4f4f4"
+        />
+    <TextView
         android:id="@+id/sevR"
         android:layout_width="56.7dp"
         android:layout_height="29.7dp"
@@ -163,6 +350,40 @@
         android:layout_below="@id/sixR"
         android:layout_alignStart="@+id/wlf"
         android:layout_alignLeft="@+id/wlf"
+        android:layout_marginTop="4.3dp"
+        android:background="#f4f4f4"
+        />
+    <TextView
+        android:id="@+id/coffee"
+        android:layout_width="48.6dp"
+        android:layout_height="29.7dp"
+        android:textSize="8.7sp"
+        android:fontFamily="sans-serif"
+        android:textStyle="normal"
+        android:textColor="#bcbcbc"
+        android:lineSpacingExtra="41.3sp"
+        android:gravity="center"
+        android:text="Coffee"
+        android:layout_below="@id/sixR"
+        android:layout_toRightOf="@+id/sevR"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="4.3dp"
+        android:background="#f4f4f4"
+        />
+    <TextView
+        android:id="@+id/greenJuice"
+        android:layout_width="78.3dp"
+        android:layout_height="29.7dp"
+        android:textSize="8.7sp"
+        android:fontFamily="sans-serif"
+        android:textStyle="normal"
+        android:textColor="#bcbcbc"
+        android:lineSpacingExtra="41.3sp"
+        android:gravity="center"
+        android:text="Green Juice"
+        android:layout_below="@id/sixR"
+        android:layout_toRightOf="@+id/coffee"
+        android:layout_marginLeft="4.1dp"
         android:layout_marginTop="4.3dp"
         android:background="#f4f4f4"
         />
