--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,7 +6,8 @@
     android:orientation="vertical" android:layout_marginStart="10dp"
 
     >
-    <TextView
+    <Button
+        android:id="@+id/signSkip"
         android:layout_width="54.7dp"
         android:layout_height="35.5dp"
         android:layout_alignParentRight="true"
@@ -18,6 +19,7 @@
         android:lineSpacingExtra="42.7sp"
         android:gravity="center"
         android:text="SKIP"
+        android:background="#00000000"
         />
 
 
