--- a/app/src/main/res/layout/activity_what_look_for.xml
+++ b/app/src/main/res/layout/activity_what_look_for.xml
@@ -7,6 +7,7 @@
 
     >
     <Button
+        android:id="@+id/whatSkip"
         android:layout_width="54.7dp"
         android:layout_height="35.5dp"
         android:layout_alignParentRight="true"
